--- a/CampusLite/Base.lproj/Main.storyboard
+++ b/CampusLite/Base.lproj/Main.storyboard
@@ -267,15 +267,18 @@
                                 <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                 <items>
                                     <navigationItem title="Title" id="IJM-P0-9l1">
+                                        <barButtonItem key="leftBarButtonItem" title="&lt;" id="y6j-Yc-Lic">
+                                            <connections>
+                                                <action selector="prevWeek:" destination="8rJ-Kc-sve" id="SeI-i8-ykB"/>
+                                            </connections>
+                                        </barButtonItem>
                                         <barButtonItem key="rightBarButtonItem" style="plain" id="pKN-Ia-mpV">
                                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="xJQ-ds-bsk">
-                                                <rect key="frame" x="447" y="7" width="133" height="30"/>
+                                                <rect key="frame" x="550" y="7" width="30" height="30"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <state key="normal" title="Change"/>
+                                                <state key="normal" title="&gt;"/>
                                                 <connections>
-                                                    <segue destination="vaa-vF-2lx" kind="popoverPresentation" identifier="selectDatePopover" popoverAnchorView="xJQ-ds-bsk" id="RhS-LZ-Ow1">
-                                                        <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
-                                                    </segue>
+                                                    <action selector="nextWeek:" destination="8rJ-Kc-sve" eventType="touchUpInside" id="MWt-Fc-e0p"/>
                                                 </connections>
                                             </button>
                                         </barButtonItem>
@@ -318,6 +321,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="750" y="360"/>
+        </scene>
+        <!--Class Management-->
+        <scene sceneID="vRE-t6-gE3">
+            <objects>
+                <viewController id="gvh-Xa-qY5" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="aCd-dS-sOI"/>
+                        <viewControllerLayoutGuide type="bottom" id="Uec-Gu-5zG"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="7i2-ne-Jne">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Class Management" image="second" id="DzC-7B-sua"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tTr-K6-bSX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="744" y="1239"/>
         </scene>
         <!--Shopping-->
         <scene sceneID="ZX0-z7-krU">
@@ -442,42 +464,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XKJ-2B-f6e" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-44" y="1445"/>
-        </scene>
-        <!--Date Pick View Controller-->
-        <scene sceneID="wjt-wC-3YG">
-            <objects>
-                <viewController id="vaa-vF-2lx" customClass="datePickViewController" customModule="PencilBox" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Jav-8V-h01"/>
-                        <viewControllerLayoutGuide type="bottom" id="G0h-Ek-rkQ"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Pn0-jq-Dyi">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="k3b-zQ-Bt1">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                                <date key="date" timeIntervalSinceReferenceDate="482314365.193241">
-                                    <!--2016-04-14 08:12:45 +0000-->
-                                </date>
-                            </datePicker>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="k3b-zQ-Bt1" firstAttribute="top" secondItem="Pn0-jq-Dyi" secondAttribute="top" id="Fio-bz-HkF"/>
-                            <constraint firstAttribute="trailing" secondItem="k3b-zQ-Bt1" secondAttribute="trailing" id="OBB-mH-U3b"/>
-                            <constraint firstItem="k3b-zQ-Bt1" firstAttribute="leading" secondItem="Pn0-jq-Dyi" secondAttribute="leading" id="oRe-gW-Jer"/>
-                            <constraint firstItem="k3b-zQ-Bt1" firstAttribute="bottom" secondItem="G0h-Ek-rkQ" secondAttribute="top" id="rQQ-bw-SMt"/>
-                        </constraints>
-                    </view>
-                    <connections>
-                        <outlet property="datePicker" destination="k3b-zQ-Bt1" id="Wzh-lh-J0N"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="bB3-rt-RH1" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1504" y="360"/>
+            <point key="canvasLocation" x="-416" y="1445"/>
         </scene>
         <!--Shop Filter View Controller-->
         <scene sceneID="8qm-fY-29C">
@@ -586,6 +573,7 @@
                     <connections>
                         <segue destination="0Na-nr-DV1" kind="relationship" relationship="viewControllers" id="4Kf-zu-9e3"/>
                         <segue destination="8rJ-Kc-sve" kind="relationship" relationship="viewControllers" id="lzU-1b-eKA"/>
+                        <segue destination="gvh-Xa-qY5" kind="relationship" relationship="viewControllers" id="c4y-Hp-wEM"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
@@ -627,7 +615,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Z4B-aF-c2N" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-44" y="2251"/>
+            <point key="canvasLocation" x="-724" y="2271"/>
         </scene>
     </scenes>
     <resources>
